version/0.23/_sources/api/solver/_autosummary/settings/thermolysis_model.rst.txt
:orphan:

.. _thermolysis_model:

thermolysis_model
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.thermolysis_model.thermolysis_model
    :show-inheritance:

.. rubric:: Attributes

======================================   ====================================================

Attribute                                                                             Summary

======================================   ====================================================
:ref:`option <option_12>`                    Select method for calculating material property.

:ref:`single_rate <single_rate>`                                         Single rate setting.

:ref:`secondary_rate <secondary_rate>`                               Secondary rate settings.

:ref:`value <value_11>`                                  Specify the constant property value.

======================================   ====================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

:ref:`material_child <material_child_1>`                             'child_object_type' of material.

======================================================   ============================================

