version/0.27/_sources/api/solver/_autosummary/settings/thermolysis_model.rst.txt
:orphan:

.. _thermolysis_model:

thermolysis_model
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.thermolysis_model
    :show-inheritance:

.. rubric:: Attributes

======================================   ====================================

Attribute                                                             Summary

======================================   ====================================
:ref:`option <option_26>`                    Select material property method.

:ref:`single_rate <single_rate>`                  Single rate model settings.

:ref:`secondary_rate <secondary_rate>`         Secondary rate model settings.

:ref:`value <value_15>`                      Specify constant property value.

======================================   ====================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

:ref:`particle_species_child <particle_species_child>`       'child_object_type' of particle_species.

:ref:`material_4_child <material_4_child>`                           'child_object_type' of material.

======================================================   ============================================

